# nicegui-highcharts

./: .components.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  DEPENDENCIES.md  LICENSE  README.md  main.py  nicegui-highcharts.code-workspace  npm.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
nicegui_highcharts/: __init__.py  events.py  highchart.js  highchart.py  highcharts.py  package-lock.json  package.json  version.py
nicegui_highcharts/src/: index.mjs
