[tool.poetry]
name = "nicegui-highcharts"
version = "3.0.0"
description = "Add Highcharts elements to your NiceGUI app."
authors = ["Zauberzeug GmbH <info@zauberzeug.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zauberzeug/nicegui-highcharts"
keywords = ["charts", "highcharts", "gui", "ui", "web"]

[tool.poetry.dependencies]
python = "^3.9"
nicegui = "^3.0.0"

[build-system]
requires = [
    "setuptools>=30.3.0,<50",
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max-line-length = 120

[tool.mypy]
python_version = "3.9"
install_types = true
check_untyped_defs = true

[tool.ruff]
target-version = "py39"
indent-width = 4
line-length = 120

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.lint]
select = [
    "I",  # isort
    "E",  # pycodestyle
    "W",  # pycodestyle
    "B",  # bugbear
    "F",  # pyflakes
    "UP", # pyupgrade
    "RUF", # ruff
    "PL", # pylint
]
fixable = [
    "I",  # isort
    "UP035", # deprecated import
    "RUF022", # `__all__` is not sorted
    "Q000",  # bad quotes inline string
    "Q001",  # bad quotes multiline string
    "Q002",  # bad quotes docstring
    "Q003",  # avoidable escaped quote
    "Q004",  # unnecessary escaped quote
]
ignore = [
    "PLR0913",  # too-many-arguments
]

[tool.pylint]
disable = [
    "C0103", # Invalid name (e.g., variable/function/class naming conventions)
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0301", # Line too long (exceeds character limit)
    "R0913", # Too many arguments
    "W0102", # Dangerous default value as argument
]
